--- a/*&**.md
+++ b/*&**.md
@@ -4,7 +4,9 @@
 **attribute_args 是关键字参数，返回的是一个字典，键是对应关键字参数，值是对应关键字参数的值，没有指定的话则是一个空字典
 对于嵌套函数，子函数形参中的关键字参数如果是父函数的关键字参数，那么则是将字典传递到子函数
 2、调用函数时：
-**成为参数收集的逆过程，即分割参数，它可以
+**成为参数收集的逆过程，即分割参数，它可以将以字典形式存储的值传递给形参。
+
+下面一些例子，供读者思考。
 
 
 例子如下
